Fix a CSS bug in <a> in dark mode

--- a/assets/css/_common/_page/post.scss
+++ b/assets/css/_common/_page/post.scss
@@ -78,7 +78,7 @@
             color: $light-post-link-hover-color;
             .dark-theme &:hover {
                 color: $dark-post-link-hover-color;
-                font-weight: bold;
+                // font-weight: bold;
                 text-decoration: underline;
             }
         }
